# rocnroll

./: Makefile  Makefile.am  Makefile.manual  Measure.h  Performance.cpp  Performance.h  Prediction.cpp  Prediction.h  ROCCurveUnnormalized.cpp  ROCCurveUnnormalized.h  SortIndex.cpp  SortIndex.h  calc_curves.cpp  configure.ac  convert.h  misc.h  ptest.cpp  test.pl  test.tsv
perf_measures/: Measure.h
src/: H5IO.cpp  H5IO.h  IPerformance.h  Makefile  Makefile.am  Makefile.manual  Makefile.no-h5  Measure.h  Performance.cpp  Performance.h  PerformanceMeasure.h  Prediction.cpp  Prediction.h  approx.cpp  approx.h  approx.tmpl.cpp  calc_all_json.cpp  calc_all_yaml.cpp  calc_auc.cpp  calc_avg_h5.cpp  calc_avg_yaml.cpp  calc_curves.cpp  misc.cpp  misc.h  testH5.cpp  test_pr_approx.R
test/: Makefile  Makefile.am  approx.test.cpp  approx.test.h  average.R  average.test.h  measure.test.cpp  measure.test.h  misc.test.h  rocr.xval.1cv.tsv
test/data/: rocr.xval.1-10cv.tsv  rocr.xval.1cv.ref.tsv
